--- a/pom.xml
+++ b/pom.xml
@@ -64,16 +64,6 @@
             <version>42.1.4</version>
         </dependency>
         <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-api</artifactId>
-            <version>2.10.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-core</artifactId>
-            <version>2.10.0</version>
-        </dependency>
-        <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
             <version>5.2.12.Final</version>
@@ -112,6 +102,11 @@
             <artifactId>gson</artifactId>
             <version>2.8.4</version>
         </dependency>   
+        <dependency>
+		<groupId>org.jboss.resteasy</groupId>
+		<artifactId>resteasy-jackson-provider</artifactId>
+		<version>3.5.1.Final</version>
+	</dependency>
     </dependencies>
 
 
