--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,8 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
-<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
-	 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	 xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
-	 version="3.1">
+<web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
     <display-name>Orginazer</display-name>
+    <resource-ref>
+        <description>jdbc:postgresql://localhost:5432/organizer</description>
+        <res-ref-name>k</res-ref-name>
+        <res-type>javax.sql.DataSource</res-type>
+        <res-auth>Container</res-auth>
+        <res-sharing-scope>Shareable</res-sharing-scope>
+    </resource-ref>
+    <servlet>
+        <servlet-name>RESTEasy WADL</servlet-name>
+        <servlet-class>org.jboss.resteasy.wadl.ResteasyWadlServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>RESTEasy WADL</servlet-name>
+        <url-pattern>/application.xml</url-pattern>
+    </servlet-mapping>
 </web-app>
