--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -14,6 +14,6 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>RESTEasy WADL</servlet-name>
-        <url-pattern>/application.xml</url-pattern>
+        <url-pattern>/organizerWADL.xml</url-pattern>
     </servlet-mapping>
 </web-app>
